# named-types-rs

./: Cargo.toml  README.md
named-types-derive/: Cargo.toml
named-types-derive/src/: lib.rs
src/: lib.rs  stdlib.rs
