[package]
name = "named-types-derive"
version = "0.1.0"
edition = "2021"
description = "A derive macro for named-types::Named"
license = "GPL-3.0-only"
repository = "https://github.com/pdamianik/named-types.git"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = "2.0"
